common_k8s_manifests/httpbin/ingress.yaml
# AWS ALB Ingress Controller를 사용하여 Ingress 리소스를 생성합니다.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=60
    alb.ingress.kubernetes.io/healthcheck-path: "/status/200" # readinessProbe와 동일한 경로 설정
    alb.ingress.kubernetes.io/healthcheck-port: "80" # 컨테이너 포트 설정
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "10" # 헬스체크 주기 (초)
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5" # 헬스체크 타임아웃 (초)
    alb.ingress.kubernetes.io/healthy-threshold-count: "2" # 헬스 체크 성공 기준 횟수
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2" # 헬스 체크 실패 기준 횟수
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: httpbin
            port:
              number: 80
